PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Better handling on Windows when there are space(s) in the paths
pts-core: Add __event_post_run_stats module hook
pts-core: Inline display of result distributions from OpenBenchmarking.org on applicable results
pts-core: Don't try to run tests from result file or suite that were not installed
phodevi: Better reporting of NVMe drive strings on BSDs

Phoronix Test Suite 8.6.0 Milestone 2
19 January 2019

pts-core: Update Mac OS X to macOS references
pts-core: Add result-file-stats sub-command to show more test result statistics
pts-core: Show geometric mean and harmonic mean data at end of benchmarking process when relevant as part of post-run stats
pts-core: Improved formatting of file download text user interface for downloading of dependencies on Microsoft Windows
pts-core: Fix Loop 'Test i of n' Reporting
pts-core: A few warning fixes for PHP 7.3+
pts-core: External dependency handling support for OpenMandriva Lx 4.0 (transitioned from urpmi to DNF)
phodevi: Report Windows Subsystem for Linux (WSL) to the system layer string

Phoronix Test Suite 8.6.0 Milestone 1
7 January 2019

pts-core: No longer clear test profile identifiers on secondary saved results
pts-core: Add compare-results-to-baseline sub-command for comparing one result file (baseline) against a set of results for text look at relative perf
pts-core: Minor fixes
pts-core: Show wins and losses summary after testing on large result files
pts-core: On two-way result files, after test completion show comparison of current result against previous result (baseline)
pts-core: Add ShowPostRunStatistics user configuration XML option to toggle whether various test statistics are printed at the end of testing
pts-core: Add recently-added-tests sub-command to show newly added test profiles / alternative to openbenchmarking-changes/recently-updated-tests
pts-core: Allow outputting line graphs to terminal interface as basic box plot graphs